Bug 312550: Incorrect wrapping in RTL textarea with horizontal scrollbar. r=smontagu, sr=roc